v3.0/_sources/group_dnnl_api.rst.txt
.. index:: pair: group; oneDNN API
.. _doxid-group__dnnl__api:

oneDNN API
==========

.. toctree::
	:hidden:

	group_dnnl_api_primitives.rst
	group_dnnl_api_memory.rst
	group_dnnl_api_primitive_cache.rst
	group_dnnl_api_blas.rst
	group_dnnl_api_common.rst
	group_dnnl_graph_api.rst
	group_dnnl_api_interop.rst
	namespace_oneapi.rst



|	:ref:`Primitives<doxid-group__dnnl__api__primitives>`
|		:ref:`Common<doxid-group__dnnl__api__primitives__common>`
|		:ref:`Attributes<doxid-group__dnnl__api__attributes>`
|		:ref:`Reorder<doxid-group__dnnl__api__reorder>`
|		:ref:`Concat<doxid-group__dnnl__api__concat>`
|		:ref:`Sum<doxid-group__dnnl__api__sum>`
|		:ref:`Binary<doxid-group__dnnl__api__binary>`
|		:ref:`Convolution<doxid-group__dnnl__api__convolution>`
|		:ref:`Deconvolution<doxid-group__dnnl__api__deconvolution>`
|		:ref:`Shuffle<doxid-group__dnnl__api__shuffle>`
|		:ref:`Eltwise<doxid-group__dnnl__api__eltwise>`
|		:ref:`Softmax<doxid-group__dnnl__api__softmax>`
|		:ref:`Pooling<doxid-group__dnnl__api__pooling>`
|		:ref:`PReLU<doxid-group__dnnl__api__prelu>`
|		:ref:`LRN<doxid-group__dnnl__api__lrn>`
|		:ref:`Batch Normalization<doxid-group__dnnl__api__batch__normalization>`
|		:ref:`Layer Normalization<doxid-group__dnnl__api__layer__normalization>`
|		:ref:`Inner Product<doxid-group__dnnl__api__inner__product>`
|		:ref:`RNN<doxid-group__dnnl__api__rnn>`
|		:ref:`Matrix Multiplication<doxid-group__dnnl__api__matmul>`
|		:ref:`Resampling<doxid-group__dnnl__api__resampling>`
|		:ref:`Reduction<doxid-group__dnnl__api__reduction>`
|	:ref:`Memory<doxid-group__dnnl__api__memory>`
|	:ref:`Primitive Cache<doxid-group__dnnl__api__primitive__cache>`
|	:ref:`BLAS functions<doxid-group__dnnl__api__blas>`
|	:ref:`Common API<doxid-group__dnnl__api__common>`
|		:ref:`Engine<doxid-group__dnnl__api__engine>`
|		:ref:`Stream<doxid-group__dnnl__api__stream>`
|		:ref:`Floating-point Math Mode<doxid-group__dnnl__api__fpmath__mode>`
|		:ref:`Service<doxid-group__dnnl__api__service>`
|		:ref:`Utilities<doxid-group__dnnl__api__utils>`
|		:ref:`Data types<doxid-group__dnnl__api__data__types>`
|	:ref:`Graph API<doxid-group__dnnl__graph__api>`
|		:ref:`Allocator<doxid-group__dnnl__graph__api__allocator>`
|		:ref:`Engine<doxid-group__dnnl__graph__api__engine>`
|		:ref:`Logical Tensor<doxid-group__dnnl__graph__api__logical__tensor>`
|		:ref:`Tensor<doxid-group__dnnl__graph__api__tensor>`
|		:ref:`Op<doxid-group__dnnl__graph__api__op>`
|		:ref:`Partition<doxid-group__dnnl__graph__api__partition>`
|		:ref:`Compiled Partition<doxid-group__dnnl__graph__api__compiled__partition>`
|		:ref:`Graph<doxid-group__dnnl__graph__api__graph>`
|		:ref:`Compiled Partition Cache<doxid-group__dnnl__graph__api__compiled__partition__cache>`
|		:ref:`Constant Tensor Cache<doxid-group__dnnl__graph__api__constant__tensor__cache>`
|		:ref:`Runtime interoperability API<doxid-group__dnnl__graph__api__interop>`
|			:ref:`SYCL interoperability API<doxid-group__dnnl__graph__api__sycl__interop>`
|	:ref:`Runtime interoperability API<doxid-group__dnnl__api__interop>`
|		:ref:`OpenCL interoperability API<doxid-group__dnnl__api__ocl__interop>`
|		:ref:`SYCL interoperability API<doxid-group__dnnl__api__sycl__interop>`
|		:ref:`Threadpool interoperability API<doxid-group__dnnl__api__threadpool__interop>`



.. ref-code-block:: cpp
	:class: doxyrest-overview-code-block

	
	// namespaces

	namespace :ref:`oneapi<doxid-namespaceoneapi>`;

